solved: bug in front of banner position fixed, removed the posibility of a horizontal scrollbar in the html document

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,6 @@
 
 html {
     font-family: 'century gothic';
+    max-width: 100dvw;
+    overflow-x: hidden;
 }
